Set hero pos to abs and fix z-index of play sect and side nav

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,9 @@ h1, h2, h3, p, ul
   margin: 0
   padding: 0
 
+.main
+  position: relative
+
 @import 'modules/nav-side-nav.sass'
 @import 'modules/section-hero.sass'
 @import 'modules/section-play-cover-slogan.sass'
