--- a/styles/modules/nav-side-nav.sass
+++ b/styles/modules/nav-side-nav.sass
@@ -6,7 +6,7 @@
   right: 0
   top: 50%
   transform: perspective(1px) translateY(-60%)
-  z-index: 1000
+  z-index: 3000
 
 .side-nav__item
   border: white solid 3px
