--- a/styles/modules/section-hero.sass
+++ b/styles/modules/section-hero.sass
@@ -1,6 +1,10 @@
 .hero
+  z-index: 2000
   overflow: hidden
-  position: relative
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
   height: 100vh
   transition: height 0.6s ease-in-out;
 
