--- a/styles/modules/section-play-cover-slogan.sass
+++ b/styles/modules/section-play-cover-slogan.sass
@@ -1,8 +1,12 @@
+.play
+  z-index: 1000
+  position: relative
+
 .play__cover-slogan
   text-align: center
   overflow: hidden
   position: relative
-  height: 120vh
+  height: 140vh
   width: 100%
   background-image: url("../img/Picture4.jpg")
   background-size: cover
